# StamFluid

./: .gitignore  CMakeLists.txt  readme.md
dependencies/glad/: glad.h
python/: optical_flow_compute  optical_flow_compute.py  resize.py  sdf_compute  sdf_compute.py  write_to_bin.py
src/: animation.h  animation.hpp  brush.hpp  cell.h  cell_mesh.h  cell_mesh.hpp  config.h  config.hpp  field.h  field.hpp  fluid_sim.h  fluid_sim.hpp  glad.c  main.cpp  utils.h  utils.hpp
src/shaders/: fragment.txt  vertex.txt
